# flameshot-uploader

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: env.hpp  flameshot-uploader.cpp
src/config/: config.cpp  config.hpp
src/logger/: logger.cpp  logger.hpp
src/screenshot/: screenshot.cpp  screenshot.hpp
src/uploader/: uploader.cpp  uploader.hpp
